# Call_Me_Maybe

./: .flake8  .gitignore  Makefile  README.md  README_ja.md  pyproject.toml
data/input/: edge_function_calling_tests.json.example  edge_functions_definition.json  edge_inputs.json  edge_inputs.json.example  function_calling_tests.json  functions_definition.json
data/output/: edge_output.json  edge_test.json  function_calling_results.json
llm_sdk/: pyproject.toml
src/: __init__.py  __main__.py  cli_arg.py  constraints.py  engine.py  llm_client.py  models.py  tokenizer.py
src/constraints/: __init__.py  constraints.py  filter.py  state.py  trie.py
tests/: test_engine.py  test_models.py  test_state.py  test_trie.py
