[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{"name" = "nsato", "email" = "nsato@student.42tokyo.jp"}]
# これがないとプログラム実行時にエラー。
dependencies = [
	"numpy",
	"pydantic"
]
# 実行ロジックに違いはないが、開発、テスト、静的解析に必要。
[dependency-groups]
dev = [
	"flake8",
	"mypy",
	"ruff",
	"ty",
	"pytest"
]
