[project]
name = "llm-sdk"
version = "0.1.0"
description = "LLM SDK for local model inference"
requires-python = ">=3.10"
# これがないとプログラム実行時にエラー。
dependencies = [
	"torch",
	"torchvision",
	"torchaudio",
	"transformers",
	"huggingface_hub",
	"accelerate"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]
